--- a/examples/git-generator-files-discovery/git-generator-files.yaml
+++ b/examples/git-generator-files-discovery/git-generator-files.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   generators:
   - git:
-      repoURL: https://github.com/argoproj-labs/applicationset.git
+      repoURL: https://github.com/kmpartner/applicationset.git
       revision: HEAD
       files:
       - path: "examples/git-generator-files-discovery/cluster-config/**/config.json"
@@ -15,10 +15,10 @@ spec:
     spec:
       project: default
       source:
-        repoURL: https://github.com/argoproj-labs/applicationset.git
+        repoURL: https://github.com/kmpartner/applicationset.git
         targetRevision: HEAD
         path: "examples/git-generator-files-discovery/apps/guestbook"
       destination:
         # server: https://kubernetes.default.svc
         server: '{{cluster.address}}'
-        namespace: guestbook
+        namespace: default
