--- a/examples/git-generator-files-discovery/apps/guestbook2/guestbook-ui-deployment.yaml
+++ b/examples/git-generator-files-discovery/apps/guestbook2/guestbook-ui-deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: guestbook-ui2
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: guestbook-ui
+      app: guestbook-ui2
   template:
     metadata:
       labels:
-        app: guestbook-ui
+        app: guestbook-ui2
     spec:
       containers:
       - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
