--- a/examples/git-generator-files-discovery/apps/guestbook2/test-deployment.yaml
+++ b/examples/git-generator-files-discovery/apps/guestbook2/test-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: argocd-demo
+  name: argocd-demo2
   labels:
-    app: argocd-demo
+    app: argocd-demo2
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: argocd-demo
+      app: argocd-demo2
   template:
     metadata:
       labels:
-        app: argocd-demo
+        app: argocd-demo2
     spec:
       containers:
-      - name: argocd-demo
+      - name: argocd-demo2
         # env:
         #   - name: PORT
         #     valueFrom:
