--- a/examples/git-generator-files-discovery/git-generator-files.yaml
+++ b/examples/git-generator-files-discovery/git-generator-files.yaml
@@ -17,8 +17,8 @@ spec:
       source:
         repoURL: https://github.com/kmpartner/applicationset.git
         targetRevision: HEAD
-        path: "examples/git-generator-files-discovery/apps/guestbook2"
+        path: "examples/git-generator-files-discovery/apps"
       destination:
-        # server: https://kubernetes.default.svc
-        server: '{{cluster.address}}'
+        server: https://kubernetes.default.svc
+        # server: '{{cluster.address}}'
         namespace: default
