--- a/examples/git-generator-directory/git-directories-example.yaml
+++ b/examples/git-generator-directory/git-directories-example.yaml
@@ -24,3 +24,4 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         # namespace: '{{path.basename}}'
+        namespace: default
