--- a/examples/git-generator-directory/git-directories-example.yaml
+++ b/examples/git-generator-directory/git-directories-example.yaml
@@ -23,5 +23,5 @@ spec:
         path: '{{path}}'
       destination:
         server: https://kubernetes.default.svc
-        # namespace: '{{path.basename}}'
-        namespace: default
+        namespace: '{{path.basename}}'
+        # namespace: default
