--- a/examples/git-generator-files-discovery/git-generator-files.yaml
+++ b/examples/git-generator-files-discovery/git-generator-files.yaml
@@ -21,6 +21,6 @@ spec:
         path: "examples/git-generator-files-discovery/apps/guestbook"
         # path: "examples/git-generator-files-discovery/apps/guestbook2"
       destination:
-        # server: https://kubernetes.default.svc
-        server: '{{cluster.address}}'
+        server: https://kubernetes.default.svc
+        # server: '{{cluster.address}}'
         namespace: default
