--- a/examples/git-generator-files-discovery/apps/kustomization.yaml
+++ b/examples/git-generator-files-discovery/apps/kustomization.yaml
@@ -1,11 +1,11 @@
 # namePrefix: kustomize-
-namePrefix: kus2-
+namePrefix: kus-
 
 resources:
 # - guestbook-ui-deployment.yaml
 # - guestbook-ui-svc.yaml
-- test-deployment.yaml
-- ./test
-- ./gb
+# - test-deployment.yaml
+- ./guestbook
+- ./guestbook2
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
