--- a/examples/git-generator-files-discovery/git-generator-files.yaml
+++ b/examples/git-generator-files-discovery/git-generator-files.yaml
@@ -19,7 +19,8 @@ spec:
         repoURL: https://github.com/kmpartner/applicationset.git
         targetRevision: HEAD
         # path: "examples/git-generator-files-discovery/apps/guestbook"
-        path: "examples/git-generator-files-discovery/apps/guestbook2"
+        # path: "examples/git-generator-files-discovery/apps/guestbook2"
+        path: "examples/git-generator-files-discovery/apps"
       destination:
         # server: https://kubernetes.default.svc
         server: '{{cluster.address}}'
